--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "typeface-roboto-condensed": "^0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
