--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
+    "typeface-archivo": "^0.0.72",
     "typeface-roboto-condensed": "^0.0.75"
   },
   "scripts": {
